@@ -26,6 +26,8 @@ New Features:
   instead of flat history, and can print a tree of the history
 - Added entity.@allow-user-field attribute to specify when UserField defs
   are considered, for security and performance reasons
+- Added eeca.@get-original-value attribute to get the original (db) value
+  if run on update or delete and before the entity operation
 
 Bug Fixes:
 - Fixed issue in ListCondition with null list entries, and improved the
